Wed Jan  7 22:20:20 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkaction.h: 
	* gtk/gtkaction.c (gtk_action_new):  
	* gtk/gtktoggleaction.h: 
	* gtk/gtktoggleaction.c (gtk_toggle_action_new): 
	* gtk/gtkradioaction.h: 
	* gtk/gtkradioaction.c (gtk_radio_action_new): Add creation 
	functions for actions.

	* gtk/gtkactiongroup.c (gtk_action_group_add_actions_full): 
	(gtk_action_group_add_toggle_actions_full): 
	(gtk_action_group_add_radio_actions_full): and use the
	new functions here.  (#125322, Patch by Jeff Frank)

Wed Jan  7 21:42:49 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkaccelmap.c (gtk_accel_map_lock_path): Fix grammar of 
	docs.

2004-01-07  Jan Arne Petersen  <jpetersen@uni-bonn.de>

	* gtk/gtkfilechooserdefault.c: (shortcuts_insert_path),
	(shortcuts_append_home), (shortcuts_append_desktop),
	(shortcuts_append_paths), (shortcuts_add_volumes),
	(shortcuts_append_bookmarks), (create_shortcuts_model),
	(gtk_file_chooser_default_add_shortcut_folder): add REMOVABLE column
	to the shortcuts_model.

	(remove_bookmark_button_clicked_cb),
	(bookmarks_check_remove_sensitivity): use REMOVABLE column to check if
	bookmarks can be removed. Fixes #129873

Wed Jan  7 02:50:55 2004  Matthias Clasen  <maclas@gmx.de>

	* demos/testpixbuf-save.c: Make s, S, Control-S, p, P, Control-P,
	i, I, Control-I test gdk_pixbuf_save(), gdk_pixbuf_save_to_buffer()
	and gdk_pixbuf_save_to_callback() with jpeg, png and ico formats, 
	respectively. Tests #82203.

2004-01-06  Federico Mena Quintero  <federico@ximian.com>

	* gtk/gtkfilesel.c (gtk_file_selection_create_dir_confirmed): Use
	0777 as the mode for mkdir() and let the umask do the right
	thing.  Fixes #121819.

	* gtk/gtkfilesystemunix.c (filename_is_root): g_path_skip_root()
	can return NULL; handle this.  Fixes #129565.

2004-01-06  Alexander Winston  <alexander.winston@comcast.net>

	* gtk/gtkfilesel.c: (gtk_file_selection_delete_file): Removed space